modified the docker-compose.yml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,19 @@ server.port=9090
 spring.application.name=organization-service
 spring.profiles.active=dev
 #spring.cloud.config.uri=http://localhost:8888
-spring.config.import=optional:configserver:http://localhost:8888
+spring.config.import=optional:configserver:http://Configuration-Service:8888
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
-eureka.client.service-url.defaultZone= http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone= http://Eureka-Service:8761/eureka/
 eureka.instance.prefer-ip-address=true
 
 management.endpoints.web.exposure.include=*
+
+keycloak.realm=microservice-relam
+keycloak.auth-server-url=http://keycloak:8080/auth
+keycloak.ssl-required= external
+keycloak.resource=microservice-client
+keycloak.credentials.secret= k2h5CfFk3IM2wL2oECNc8pFv5tIY7qku
+keycloak.use-resource-role-mappings=true
+keycloak.bearer-only=true
+spring.main.allow-circular-references=true
